Majdnem teljesen kész, még a GameAreaPanel méretének a scalingjét kell megcsinálni, a fade-et, meg azt hogy lehessen állítani a méretét játék közben